# TensorCompiler

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: onnx_loader.hpp  parse_cli.hpp
include/cli/: parse_cli.hpp
include/frontend/: onnx_importer.hpp  onnx_loader.hpp
include/ir/: attr.hpp  graph.hpp  node.hpp  tensor.hpp  types.hpp  value.hpp
include/viz/: graph_dump.hpp
onnx_maker/: example.onnx  make_onnx.py
src/: main.cc  onnx_loader.cc  parse_cli.cc
src/cli/: parse_cli.cc
src/frontend/: onnx_importer.cc  onnx_loader.cc
src/viz/: graph_dump.cc
tests/: CMakeLists.txt  test_graph.cc  test_importer.cc
tests/testdata/: all_ops_attrs.onnx  branchy.onnx
